--- a/src/components/pageJob/pageJob.style.scss
+++ b/src/components/pageJob/pageJob.style.scss
@@ -1,5 +1,5 @@
 $Ubuntu: 'Ubuntu';
-$Futuris: 'Futuris Bold';
+$Futuris: 'FuturaFuturisC';
 $colorMain: #BB0025;
 @mixin fons($size: 1rem, $family: $Ubuntu) {
     font-size: $size;
