--- a/src/components/pagePolitika/pagePolitika.style.scss
+++ b/src/components/pagePolitika/pagePolitika.style.scss
@@ -1,5 +1,5 @@
 $Ubuntu: 'Ubuntu';
-$Futuris: 'Futuris Bold';
+$Futuris: 'FuturaFuturisC';
 @mixin fons($size: 1rem, $family: $Ubuntu) {
     font-size: $size;
     font-family: $family !important;
