--- a/src/components/profile/profile.style.scss
+++ b/src/components/profile/profile.style.scss
@@ -1,5 +1,5 @@
 $Ubuntu: 'Ubuntu';
-$Futuris: 'Futuris Bold';
+$Futuris: 'FuturaFuturisC';
 $mainColor: #CC0033;
 @mixin fons($size: 1rem, $family: $Ubuntu) {
     font-size: $size;
