--- a/src/components/app/app.style.scss
+++ b/src/components/app/app.style.scss
@@ -17,7 +17,7 @@ $Futuris: 'FuturaFuturisC';
 $colorMain: #CC0033;
 @mixin fons($size: 1rem, $family: $Ubuntu) {
     font-size: $size;
-    font-family: $family !important;
+    font-family: $family, sans-serif !important;
 }
 
 ::-webkit-scrollbar-track{
