--- a/src/components/home/home.style.scss
+++ b/src/components/home/home.style.scss
@@ -1,5 +1,5 @@
 $Ubuntu: 'Ubuntu';
-$Futuris: 'FuturaFuturisC';
+$Futuris: 'FuturaFuturisC Bold';
 $colorMain: #CC0033;
 @mixin fons($size: 1rem, $family: $Ubuntu) {
     font-size: $size;
