--- a/src/components/cart/cart.style.scss
+++ b/src/components/cart/cart.style.scss
@@ -1,9 +1,13 @@
 $Ubuntu: 'Ubuntu';
-$Futuris: 'FuturaFuturisC';
+$Futuris: 'FuturaFuturisC Bold';
 $mainColor: #CC0033;
 @mixin fons($size: 1rem, $family: $Ubuntu) {
     font-size: $size !important;
     font-family: $family !important;
+}
+@mixin fons_new($size: 1rem, $family: $Ubuntu) {
+    font-size: $size !important;
+    font-family: $family, bold !important;
 }
 .MuiRadio-colorSecondary.Mui-checked{
     color: $mainColor!important;
@@ -135,7 +139,7 @@ div.boxItem .promoIcon{
     padding-bottom: 0px;
 }
 .orderCheckTitle{
-    @include fons(1.3rem, $Futuris);
+    @include fons_new(1.3rem, $Futuris);
     padding: 16px;
     padding-bottom: 0;
     text-align: center;
@@ -171,7 +175,7 @@ div.boxItem .promoIcon{
         min-width: 66px;
     }
     & h2{
-        @include fons(1.5rem, $Futuris);
+        @include fons_new(1.5rem, $Futuris);
         text-align: center;
         color: #000;
     }
@@ -382,7 +386,7 @@ div.boxItem .promoIcon{
 .Cart{
     margin-top: 64px!important;
     & h1{
-        @include fons(2rem, $Futuris);
+        @include fons_new(2rem, $Futuris);
         text-align: center;
     }
     & .mainContainer.mobile{
@@ -662,7 +666,7 @@ div.boxItem .promoIcon{
             padding-left: 34px!important;
         }
         & h1{
-            @include fons(1.7rem, $Futuris);
+            @include fons_new(1.7rem, $Futuris);
             text-align: center;
         }
     }
