--- a/src/components/contact/contact.style.scss
+++ b/src/components/contact/contact.style.scss
@@ -1,8 +1,12 @@
 $Ubuntu: 'Ubuntu';
-$Futuris: 'FuturaFuturisC';
+$Futuris: 'FuturaFuturisC Bold';
 @mixin fons($size: 1rem, $family: $Ubuntu) {
     font-size: $size;
     font-family: $family !important;
+}
+@mixin fons_new($size: 1rem, $family: $Ubuntu) {
+    font-size: $size !important;
+    font-family: $family, bold !important;
 }
 .MuiAccordionSummary-content span{
     padding: 0!important;
@@ -10,10 +14,10 @@ $Futuris: 'FuturaFuturisC';
 .Contact{
     margin-top: 64px!important;
     & h1{
-        @include fons(2rem, $Futuris);
+        @include fons_new(2rem, $Futuris);
     }
     & h2{
-        @include fons(1.3rem, $Futuris);
+        @include fons_new(1.3rem, $Futuris);
     }
     & span, h2, a{
         padding-left: 12px;
@@ -73,7 +77,7 @@ $Futuris: 'FuturaFuturisC';
             padding-left: 34px!important;
         }
         & h1{
-            @include fons(1.7rem, $Futuris);
+            @include fons_new(1.7rem, $Futuris);
             text-align: center;
         }
     }
