--- a/src/components/pageInstPay/pageInstPay.style.scss
+++ b/src/components/pageInstPay/pageInstPay.style.scss
@@ -1,17 +1,21 @@
 $Ubuntu: 'Ubuntu';
-$Futuris: 'FuturaFuturisC';
+$Futuris: 'FuturaFuturisC Bold';
 @mixin fons($size: 1rem, $family: $Ubuntu) {
     font-size: $size;
     font-family: $family !important;
 }
+@mixin fons_new($size: 1rem, $family: $Ubuntu) {
+    font-size: $size !important;
+    font-family: $family, bold !important;
+}
 .PAGEinstpay{
     margin-top: 64px!important;
     & h1{
-        @include fons(1.3rem, $Futuris);
+        @include fons_new(1.3rem, $Futuris);
         text-align: center;
     }
     & h2{
-        @include fons(1.3rem, $Futuris);
+        @include fons_new(1.3rem, $Futuris);
     }
     & .boxImg{
         width: 100%;
@@ -36,7 +40,7 @@ $Futuris: 'FuturaFuturisC';
             padding-left: 48px!important;
         }
         & h1{
-            @include fons(1.3rem, $Futuris);
+            @include fons_new(1.3rem, $Futuris);
             text-align: center;
         }
     }
