--- a/src/components/app/app.style.scss
+++ b/src/components/app/app.style.scss
@@ -49,6 +49,9 @@ $colorMain: #CC0033;
 	background-color: #d0d0d0;
 }
 
+.grecaptcha-badge{
+    display: none!important;
+}
 .example-enter {
     opacity: 0.01;
 }
