--- a/src/components/app/app.style.scss
+++ b/src/components/app/app.style.scss
@@ -374,6 +374,9 @@ body{
         display: flex;
         flex-direction: column;
     }
+    & .newContent input{
+        border-color: #000 !important;
+    }
     & .ModalContent_1_3{
         margin-top: 30px;
         display: flex; 
