--- a/src/components/app/app.style.scss
+++ b/src/components/app/app.style.scss
@@ -374,7 +374,7 @@ body{
         display: flex;
         flex-direction: column;
     }
-    & .newContent input{
+    & .newContent fieldset{
         border-color: #000 !important;
     }
     & .ModalContent_1_3{
