--- a/src/components/app/app.style.scss
+++ b/src/components/app/app.style.scss
@@ -9,6 +9,7 @@
         url('/src/assets/fonts/FuturaFuturisC-Bold.ttf') format('truetype');
     font-weight: bold;
     font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
@@ -21,6 +22,7 @@
         url('/src/assets/fonts/FuturaFuturisC-Bold.ttf') format('truetype');
     font-weight: bold;
     font-style: normal;
+    font-display: swap;
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
