--- a/src/components/home/home.style.scss
+++ b/src/components/home/home.style.scss
@@ -177,7 +177,7 @@ $colorMain: #CC0033;
     }
     & img{
         max-width: 100%;
-        width: 90%;
+        width: auto;
         padding: 0px 1.2vw;
     }
     & .CardInfoItem{
