--- a/src/components/home/home.style.scss
+++ b/src/components/home/home.style.scss
@@ -90,9 +90,8 @@ $colorMain: #CC0033;
 }
 
 .swiper_pc{
-    padding-top: 70px!important;
     margin-bottom: 20px!important;
-    & .swiper-slide-prev{
+    /*& .swiper-slide-prev{
         margin-right: 5vw!important;
         width: calc(80vw - 0px) !important;
         margin-left: -48.5vw !important;
@@ -104,7 +103,7 @@ $colorMain: #CC0033;
     & .swiper-slide-next{
         margin-right: 5vw!important;
         width: calc(80vw - 0px )!important;
-    }
+    }*/
 }
 
 .swiper-button-prev{
