--- a/src/components/home/home.style.scss
+++ b/src/components/home/home.style.scss
@@ -72,25 +72,26 @@ $colorMain: #CC0033;
 }
 
 .swiper_mobile{
-    padding-top: 94px!important;
+    padding-top: 85px!important;
     margin-bottom: 20px!important;
     & .swiper-slide-prev{
-        margin-right: 5vw!important;
-        width: calc(80vw - 0px) !important;
-        margin-left: -43vw !important;
+        //margin-right: 5vw!important;
+        //width: calc(80vw - 0px) !important;
+        //margin-left: -43vw !important;
     }
     & ._h2_:not(._count_1) .swiper-slide-active{
-        width: calc(80vw - 0px )!important;
-        margin-right: 5vw!important;
+        width: 100%;
+        //width: calc(80vw - 0px )!important;
+        //margin-right: 5vw!important;
     }
     & .swiper-slide-next{
-        margin-right: 5vw!important;
-        width: calc(80vw - 0px )!important;
+        //margin-right: 5vw!important;
+        //width: calc(80vw - 0px )!important;
     }
 }
 
 .swiper_pc{
-    padding-top: 70px!important;
+    padding-top: 50px!important;
     margin-bottom: 20px!important;
     & .swiper-slide-prev{
        // margin-right: 5vw!important;
