--- a/src/components/item/item.style.scss
+++ b/src/components/item/item.style.scss
@@ -66,9 +66,8 @@ $colorMain: #CC0033;
         justify-content: flex-end;
     }
     & img{
-        width: auto;
+        width: 100%;
         height: auto;
-        max-width: 100%;
     }
     & .ItemDesc{
         @include fons(1.2rem, $Ubuntu);
