--- a/src/components/home/home.style.scss
+++ b/src/components/home/home.style.scss
@@ -434,3 +434,7 @@ $colorMain: #CC0033;
 .OpenItemPC .MuiDialog-paper{
     overflow-y: visible!important;
 }
+.IconButtonClose > span{
+    width: 10%!important;
+    height: auto!important;
+}
