--- a/src/components/item/item.style.scss
+++ b/src/components/item/item.style.scss
@@ -67,6 +67,7 @@ $colorMain: #CC0033;
     }
     & img{
         object-fit: none;
+        image-rendering: auto;
         width: 70%;
         height: auto;
     }
