--- a/src/components/app/app.style.scss
+++ b/src/components/app/app.style.scss
@@ -36,6 +36,17 @@
     font-weight: 400;
     font-style: normal;
 }
+@font-face {
+    font-family: 'Robotobold';
+    src: 
+        local('Robotobold'), 
+        local('Robotobold'), 
+        url('/src/assets/fonts/Robotobold.woff2') format('woff2'), 
+        url('/src/assets/fonts/Robotobold.woff') format('woff'), 
+        url('/src/assets/fonts/Robotobold.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
+}
 
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
 $Ubuntu: 'Ubuntu';
