--- a/src/components/item/item.style.scss
+++ b/src/components/item/item.style.scss
@@ -233,6 +233,12 @@ $colorMain: #CC0033;
         font-family: $Roboto!important;
         font-weight: 400!important;
         color: #525252!important;
-        font-size: 1.6rem!important;
+        font-size: 1.3rem!important;
+    }
+    & .ModalItemDesc{
+        font-family: $Roboto!important;
+        font-weight: 400!important;
+        color: #525252!important;
+        font-size: 1.7rem!important;
     }
 }
