--- a/src/components/item/item.style.scss
+++ b/src/components/item/item.style.scss
@@ -241,4 +241,10 @@ $colorMain: #CC0033;
         color: #525252!important;
         font-size: 1.7rem!important;
     }
+    & .ModalItemButtonCart{
+        font-family: $Roboto!important;
+        font-weight: 400!important;
+        color: #525252!important;
+        font-size: 1.7rem!important;
+    }
 }
