--- a/src/components/app/app.style.scss
+++ b/src/components/app/app.style.scss
@@ -25,29 +25,7 @@
     font-display: swap;
 }
 
-@font-face {
-    font-family: 'Roboto';
-    src: 
-        local('Roboto'), 
-        local('Roboto-Regular'), 
-        url('/src/assets/fonts/Roboto.woff2') format('woff2'), 
-        url('/src/assets/fonts/Roboto.woff') format('woff'), 
-        url('/src/assets/fonts/Roboto.ttf') format('truetype');
-    font-weight: 400;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'Robotobold';
-    src: 
-        local('Robotobold'), 
-        local('Robotobold'), 
-        url('/src/assets/fonts/Robotobold.woff2') format('woff2'), 
-        url('/src/assets/fonts/Robotobold.woff') format('woff'), 
-        url('/src/assets/fonts/Robotobold.ttf') format('truetype');
-    font-weight: 400;
-    font-style: normal;
-}
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
 $Ubuntu: 'Ubuntu';
 $Futuris: 'FuturaFuturisC Bold';
