--- a/src/components/item/item.style.scss
+++ b/src/components/item/item.style.scss
@@ -228,6 +228,7 @@ $colorMain: #CC0033;
         font-weight: bold!important;
         color: #525252!important;
         font-size: 3rem!important;
+        letter-spacing: 1px!important;
     }
     & .ModalItemOther{
         font-family: $Roboto!important;
