--- a/src/components/item/item.style.scss
+++ b/src/components/item/item.style.scss
@@ -225,35 +225,36 @@ $colorMain: #CC0033;
 .NewModal{
     & .ModalItemTitle{
         font-family: $Roboto!important;
-        font-weight: bold!important;
+        font-weight: 500!important;
         color: #525252!important;
-        font-size: 3rem!important;
+        font-size: 2.7rem!important;
         letter-spacing: 1px!important;
+        line-height: 1em!important;
     }
     & .ModalItemOther{
         font-family: $Roboto!important;
         font-weight: 400!important;
         color: #525252!important;
-        font-size: 1.3rem!important;
+        font-size: 1.1rem!important;
     }
     & .ModalItemDesc{
         font-family: $Roboto!important;
         font-weight: 400!important;
         color: #525252!important;
-        font-size: 1.7rem!important;
+        font-size: 1.5rem!important;
     }
     & .ModalItemButtonCart{
         font-family: $Roboto!important;
         font-weight: 400!important;
         color: #525252!important;
-        font-size: 1.4rem!important;
+        font-size: 1.2rem!important;
         text-transform: initial!important;
     }
     & .ModalItemButtonCartOther{
         font-family: $Roboto!important;
         font-weight: 100!important;
         color: #525252!important;
-        font-size: 1.2rem!important;
+        font-size: 1rem!important;
         text-transform: initial!important;
     }
 }
