--- a/src/components/app/app.style.scss
+++ b/src/components/app/app.style.scss
@@ -25,7 +25,7 @@
     font-display: swap;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
 $Ubuntu: 'Ubuntu';
 $Futuris: 'FuturaFuturisC Bold';
