--- a/src/components/home/home.style.scss
+++ b/src/components/home/home.style.scss
@@ -28,6 +28,7 @@ $colorMain: #CC0033;
     overflow-y: auto !important;
     height: 50%;
     align-self: end;
+    margin-bottom: 33px!important;
 }
 
 .imgSVG{
