--- a/src/components/item/item.style.scss
+++ b/src/components/item/item.style.scss
@@ -272,7 +272,7 @@ $colorMain: #CC0033;
 }
 .styleTooltip > div::before{
     content: '';
-    border-bottom: 1px dashed #ccc;
+    border-bottom: 1px dotted #ccc;
     flex-grow: 1;
     order: 2;
     margin: 5px 7px;
