--- a/src/components/item/item.style.scss
+++ b/src/components/item/item.style.scss
@@ -70,7 +70,7 @@ $colorMain: #CC0033;
     & img{
         object-fit: none;
         image-rendering: auto;
-        width: 100%;
+        width: 80%;
         height: auto;
     }
     & .ItemDesc{
@@ -259,7 +259,7 @@ $colorMain: #CC0033;
     }
 }
 .MuiTooltip-popper{
-    left: -100px!important;
+    //left: -100px!important;
     pointer-events: auto!important;
     & > div{
         max-width: 400px!important;
