--- a/src/components/home/home.style.scss
+++ b/src/components/home/home.style.scss
@@ -206,6 +206,7 @@ $colorMain: #CC0033;
         @include fons(1.7rem, $Roboto);
         font-weight: 500;
         text-align: center;
+        color: #525252;
     }
     & .CardInfoWeiItem{
         @include fons(0.8rem, $Ubuntu);
