--- a/src/components/home/home.style.scss
+++ b/src/components/home/home.style.scss
@@ -346,7 +346,7 @@ $colorMain: #CC0033;
         align-items: center;
     }
 } 
-#cat10 .CardItem_mobile img, 
+/*#cat10 .CardItem_mobile img, 
 #cat13 .CardItem_mobile img, 
 #cat12 .CardItem_mobile img, 
 #cat9 .CardItem_mobile img, 
@@ -358,7 +358,7 @@ $colorMain: #CC0033;
     display: block;
     position: relative;
     z-index: 1;
-}
+}*/
 .alice-carousel{
     margin-top: 50px!important;
     height: max-content;
