--- a/src/components/home/home.style.scss
+++ b/src/components/home/home.style.scss
@@ -55,6 +55,9 @@ $colorMain: #CC0033;
     }
 }
 .ItemDialog{
+    & .MuiDialog-paperFullScreen{
+        margin-top: 100px;
+    }
     & .MainItem_mobile{
         margin-top: 30px!important;
     }
