--- a/src/components/home/home.style.scss
+++ b/src/components/home/home.style.scss
@@ -62,7 +62,7 @@ $colorMain: #CC0033;
         margin-top: 30px!important;
     }
     & span, p, b{
-        @include fons(1rem, $Ubuntu);
+        //@include fons(1rem, $Ubuntu);
     }
 }
 .fohover{
