--- a/src/components/item/item.style.scss
+++ b/src/components/item/item.style.scss
@@ -62,6 +62,7 @@ $colorMain: #CC0033;
     }
     & > div:last-child{
         display: flex; 
+        flex-direction: column;
     }
     & > div:not(:last-child):not(:first-child){
         display: flex;
