--- a/src/components/home/home.style.scss
+++ b/src/components/home/home.style.scss
@@ -57,6 +57,7 @@ $colorMain: #CC0033;
 .ItemDialog{
     & .MuiDialog-paperFullScreen{
         margin-top: 100px;
+        overflow: initial!important;
     }
     & .MainItem_mobile{
         margin-top: 30px!important;
