--- a/src/components/item/item.style.scss
+++ b/src/components/item/item.style.scss
@@ -57,7 +57,7 @@ $colorMain: #CC0033;
 
 .OpenItemPC .MuiDialog-paper{
     width: 75%!important;
-    max-height: 86%!important;
+    height: 86%!important;
 }
 
 .MainItem{
