--- a/src/components/item/item.style.scss
+++ b/src/components/item/item.style.scss
@@ -235,6 +235,9 @@ $colorMain: #CC0033;
     @media (max-width: 600px){
         display: none;
     }
+    & .MuiTooltip-tooltipPlacementBottom{
+        margin: 10px!important
+    }
 }
 .NewModal{
     & .ModalItemTitle{
@@ -272,11 +275,27 @@ $colorMain: #CC0033;
         text-transform: initial!important;
     }
 }
+
+.pos{
+    & .MuiTooltip-popper{
+        left: -17%!important;
+        right: 17%!important;
+    }
+    & .MuiTooltip-popper33{
+        left: -17%!important;
+        right: 17%!important;
+    }
+}
+.set{
+    & .MuiTooltip-popper{
+        left: -39%!important;
+        right: 39%!important;
+    }
+}
+
 .MuiTooltip-popper{
     //left: -100px!important;
     pointer-events: auto!important;
-    left: -3%!important;
-    right: 3%!important;
     & > div{
         max-width: 400px!important;
         background-color: rgba(0,0,0, 0.65) !important;
