--- a/src/components/item/item.style.scss
+++ b/src/components/item/item.style.scss
@@ -56,7 +56,7 @@ $colorMain: #CC0033;
 }
 
 .OpenItemPC .MuiDialog-paper{
-    width: 75%!important;
+    width: 85%!important;
     height: 82%!important;
 }
 
@@ -286,7 +286,7 @@ $colorMain: #CC0033;
         backdrop-filter: blur(15px);
         color: #fff!important;
         border-radius: 30px;
-        padding: 20px;
+        padding: 1.7vw;
         border: none!important;
         z-index: 4000;
     }
