--- a/src/components/item/item.style.scss
+++ b/src/components/item/item.style.scss
@@ -280,6 +280,7 @@ $colorMain: #CC0033;
     //left: -100px!important;
     pointer-events: auto!important;
     transform: initial!important;
+    top: 110px!important;
     & > div{
         max-width: 400px!important;
         background-color: rgba(0,0,0, 0.65) !important;
